2005-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): elucidate GS problem.

	* scm/output-ps.scm (white-text): reinstate white-text

2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (offset-add): Remove.

	* scm/lily-library.scm (offset-flip-y): New function.
	* scm/framework-gnome.scm (tweak): Use it.

	* scm/output-gnome.scm (grob-cause): Add parameter.

	* scm/lily.scm (ly:all-stencil-expressions): Add url-link.
	* scm/output-ps.scm (url-link): Move.
	(white-text): Warn user about brokenness.

	* Documentation/topdocs/NEWS.tely: Be more accurate and respectful
	wrt ghostscript.

2005-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slash-repeat-engraver.cc (try_music): always make slashes
	if body length smaller than measure length.

	* scm/define-markup-commands.scm (with-url): oops. use Y extent
	for Y.

	* ly/titling-init.ly (tagline): put default tagline in \paper

2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/kpath.cc: 
	* lily/pdf.cc (Pdf_file): Use more generic error messages.

	* scm/lily-library.scm (version-not-seen-message): New function.
	* ly/init.ly: Use it.

	* scm/page-layout.scm (ly:optimal-page-breaks): Display page
	breaks as progess.

	* scripts/lilypond-book.py (do_process_cmd): Do not lump
	whitespace with l10n message.

	* scm/framework-tex.scm (convert-to-ps):
	(convert-to-dvi): Do not use overly specific l10n messages.

	* ly/titling-init.ly (bookTitleMarkup): Add baseline skips from 2.4.

	* tex/GNUmakefile $(outdir)/latin1.enc: Build fix:
	merge stderr with stdout.  

2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/libc-extension.cc: Tested BSD compile fix (Matthias Neeracher).

2005-02-29  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/instrument-notation.teily: moved
	\arpeggio to Basic.

	* Documentation/user/advanced-notation.itely: Articulation to
	Basic, a bunch of stuff from Basic moved to Advanced.
