@@ -1,3 +1,9 @@
+2005-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/tweak-registration.cc (replace_grob_tweak): New function.
+	* lily/tweak-registration-scheme.cc (LY_DEFINE): Wrap it.
+	* scm/framework-gnome.scm (tweak): Use it.
+
 2005-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* Documentation/topdocs/NEWS.tely (Top): elucidate GS problem.
